[project]
name = "aioloki-py"
version = "0.1.1"
description = "Async Python logging handler for grafan loki Ships log records to Loki's HTTP push API using `aiohttp`, integrating seamlessly with Python's standard `logging` module."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "orjson>=3.11.7",
    "rfc3339>=6.2",
]

[dependency-groups]
lint = [
    "isort>=8.0.0",
    "mypy>=1.19.1",
    "ruff>=0.15.4",
]
[tool.ruff]
line-length = 79
src = ["aioloki_py"]
target-version = "py314"
exclude = [
    ".git",
    "build",
    "dist",
    "venv",
    ".venv",
    "docs",
    "dev",
    "scripts",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "I",   # isort (встроен в ruff)
    "UP",  # pyupgrade
    "T10", # flake8-debugger
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["aioloki_py"]

[tool.mypy]
python_version = "3.13"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[tool.isort]
profile = "ruff"
line_length = 79
